--- a/css/superfish-styles.css
+++ b/css/superfish-styles.css
@@ -72,6 +72,7 @@ ul.sf-menu {
   color: #ffffff;
   border-left: 1px solid #411977;
   font-size: 12px;
+  font-family: Arial;
 }
 
 /* Set the first element to be wider */
